# load-balancer

./: Cargo.toml  README.md
caller/: Cargo.toml
caller/src/: main.rs
load-balancer/: .env  Cargo.toml
load-balancer-old/: Cargo.toml
load-balancer-old/src/: lib.rs  main.rs
load-balancer-old/src/helpers/: mod.rs
load-balancer-old/src/proxy/: backend.rs  load_balancer.rs  mod.rs  proxy.rs
load-balancer/migrations/: 20241212012149_create_worker_table.down.sql  20241212012149_create_worker_table.up.sql
load-balancer/src/: lib.rs  main.rs
load-balancer/src/proxy/: load_balancer.rs  mod.rs  worker_stats.rs  workers.rs
load-balancer/src/services/: postgres_store.rs
load-balancer/src/utils/: constants.rs  mod.rs  stream_reader.rs  tracing.rs
mock-api/: Cargo.toml
mock-api/src/: constants.rs  main.rs
src/: main.rs
