[package]
name = "load-balancer-old"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
hyper = { version = "1.5.1", features = ["full"] }
pin-project-lite = "0.2.15"
tokio = { version = "1.5.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
